Update tags component : fix articles and header overlaping

--- a/src/app/tags/tags.component.css
+++ b/src/app/tags/tags.component.css
@@ -2,4 +2,8 @@
   min-height: calc(100vh - 184px);
   background-color:#f7f1e3;
 }
-
+.content::ng-deep main{
+  /* border: 1px solid red; */
+  position: relative;
+  z-index: 1000;
+}
